--- a/Tansilotren-Georgia/index.html
+++ b/Tansilotren-Georgia/index.html
@@ -561,8 +561,8 @@
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p><b>Виробник:</b><br>DHU (Німеччина)<br>https://www.dhu.de/</p></a>
-                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Постачальник:</b><br> Альпен Фарма АГ<br>(Швейцарія)</p></a>
+                <a class="disclamer-tra__logo" href=""><p><b>მწარმოებელი:</b><br>DHU<br>https://www.dhu.de/</p></a>
+        <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>მომწოდებელი:</b><br> Alpen Pharma<br></p></a>
             </div>
         </div>
     </div>
