--- a/influcid-Georgia/index.html
+++ b/influcid-Georgia/index.html
@@ -461,8 +461,8 @@
       <!--            </p>-->
 <!--      <p>DEŢINĂTORUL CERTIFICATULUI DE ÎNREGISTRARE Deutsche Homöopathie-Union DHU-Arzneimittel GmbH & Co KG, Ottostrasse 24, 76227 Karlsruhe Germania Tel.: + 49 (721) 40 93 236</p>-->
       <div class="logos-container">
-        <a class="disclamer-tra__logo" href=""><p><b>მწარმოებელი:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-        <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>მომწოდებელი:</b><br> Alpen Pharma<br>(Швейцария)</p></a>
+        <a class="disclamer-tra__logo" href=""><p><b>მწარმოებელი:</b><br>DHU<br>https://www.dhu.de/</p></a>
+        <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>მომწოდებელი:</b><br> Alpen Pharma<br></p></a>
       </div>
     </div>
 
