--- a/Tansilotren-KZ/index-ru.html
+++ b/Tansilotren-KZ/index-ru.html
@@ -22,7 +22,7 @@
                 <a class="navmenu" href="#block-2">Способ приемА</a>
                 <a class="navmenu" href="#block-3">Полезная информация</a>
                 <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
-                <a class="lang" href="index.html">ua</a>
+                <a class="lang" href="index.html">kz</a>
             </div>
 
             <!--        mobile menu-->
@@ -559,7 +559,7 @@
 
         <h1>Где купить</h1>
 
-        <div id="comp_wgt" class="map2" data-drug="5835" data-lang="ru" data-url="https://compendium.com.ua/info/3025/tonzilotren/" data-proj="tonsilotren" style="z-index: 5; border-color: #A00067; width: 100%;"><div class="title" style="background: #A00067;"><a href="https://compendium.com.ua/info/3025/tonzilotren/" title="ТОНЗИЛОТРЕН, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
+        <div class="block-7__img"></div>
         <div class="map-text">
             <h3>Доказательная база</h3>
             <ol>
@@ -581,8 +581,8 @@
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p><b>Изготовитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Поставщик:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
+                <a class="disclamer-tra__logo" href=""></a>
+                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"></a>
             </div>
         </div>
     </div>
