--- a/Tansilotren-KZ/index.html
+++ b/Tansilotren-KZ/index.html
@@ -540,7 +540,7 @@
         </div>
 
         <h1>ҚАЙДАН САТЫП АЛУҒА БОЛАДЫ</h1>
-
+        <div class="block-7__img"></div>
         <div class="map-text">
             <h3>Дәлелдемелер базасы</h3>
             <ol>
@@ -562,8 +562,8 @@
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p><b>Изготовитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
-                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Поставщик:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
+                <a class="disclamer-tra__logo" href=""></a>
+                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"></a>
             </div>
         </div>
     </div>
