--- a/Tansilotren-Georgia/index-ru.html
+++ b/Tansilotren-Georgia/index-ru.html
@@ -581,14 +581,14 @@
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p><b>Изготовитель:</b><br>DHU (Германия)<br>https://www.dhu.de/</p></a>
+                <a class="disclamer-tra__logo" href=""><p><b>Изготовитель:</b><br>DHU (Германия)<br></p></a>
                 <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>Поставщик:</b><br> Альпен Фарма АГ<br>(Швейцария)</p></a>
             </div>
         </div>
     </div>
 
     <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
+        <!-- <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p> -->
     </div>
 </div>
 
