--- a/Tansilotren-KZ/index-ru.html
+++ b/Tansilotren-KZ/index-ru.html
@@ -575,8 +575,7 @@
     <div class="disclamer-tra__inner">
         <div class="disclamer-tra">
             <p class="dt1">
-                Реклама лікарського засобу. Перед застосуванням уважно ознайомтесь з інструкцією та проконсультуйтеся з лікарем. РП Тонзилотрен № UA/3781/01/01 від 20.08.2015. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ,
-                Пуща-Водиця, 04075; телефон: (044) 401-81-03.
+                
             </p>
 
 
@@ -588,7 +587,8 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
+        <p>ИМЕЮТСЯ ПРОТИВОПОКАЗАНИЯ, НЕОБХОДИМО ПРОКОНСУЛЬТИРОВАТЬСЯ СО СПЕЦИАЛИСТОМ
+ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С ИНСТРУКЦИЕЙ И ПРОКОНСУЛЬТИРУЙТЕСЬ У ВРАЧА.</p>
     </div>
 </div>
 
