--- a/Tansilotren-KZ/index.html
+++ b/Tansilotren-KZ/index.html
@@ -259,7 +259,7 @@
 
         <div class="plate">
             <div class="plate-img"></div>
-            <h3>6 жастан дейінгі балаларға</h3>
+            <h3>6 жастан дейінгі<br>балаларға</h3>
             <p><b>Жедел жағдайларда немесе күтім терапиясы үшін:</b><br>1 таблеткадан күніне 3 рет.</p>
             <!--            <div class="popup popup1">Детальнее</div>-->
             <button class="popup-btn popup1" data-action="open1">Толығырақ</button>
@@ -275,14 +275,14 @@
 
         <div class="plate">
             <div class="plate-img"></div>
-            <h3>6 жастан 12 жасқа дейінгі балаларға</h3>
+            <h3>6 жастан 12 жасқа дейінгі<br>балаларға</h3>
             <p><b>Жіті кезең:</b><br>Әр  2 сағат сайын 1 таблеткадан
                 (күніне 6 ретке дейін) алғашқы 1-2 күннен жақсарғанға дейін.</p>
             <button class="popup-btn popup2" data-action="open2">Толығырақ</button>
         </div>
         <div class="plate">
             <div class="plate-img"></div>
-            <h3>Ересектер мен 12 жастан асқан балаларға</h3>
+            <h3>Ересектер мен 12 жастан асқан<br>балаларға</h3>
             <p><b>Жіті кезең:</b><br>Әр сағат сайын 1 таблеткадан
                 (күніне 12 ретке дейін) алғашқы 1-2 күннен жақсарғанға дейін.</p>
             <button class="popup-btn popup3" data-action="open3">Толығырақ</button>
@@ -569,7 +569,8 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>ӨЗІН ӨЗІ ЕМДЕУ СІЗДІҢ ДЕНСАУЛЫҒЫҢЫЗҒА <br>ҚАУІПТІ БОЛУЫ МҮМКІН</p>
+        <p>ҚАРСЫ ӘРЕКЕТТЕРІ БАР, МАМАННАН КЕҢЕС АЛУ КЕРЕК.<br>
+ҚОЛДАНАР АЛДЫНДА НҰСҚАУЛЫҚПЕН ТАНЫСУ КЕРЕК ЖӘНЕ ДӘРІГЕРДЕН КЕҢЕС АЛУ КЕРЕК.</p>
     </div>
 </div>
 
