--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -43,9 +43,9 @@
               <!-- <a class="where-to-buy" href="#block-5" >Хаанаас худалдаж авах</a> -->
               <a href="index-en.html" >en</a>
           </div>
-          <a class="instruction" href="./instruction.pdf"
-          ><p class="translated-text" key="instruction">Хэрэглэх заавар</p></a
-          >
+          <a class="instruction" href="./instruction.pdf">
+          	<p class="translated-text" key="instruction">Хэрэглэх заавар</p>
+          </a>
         </div>
 
 
