--- a/Tansilotren-Georgia/index.html
+++ b/Tansilotren-Georgia/index.html
@@ -55,7 +55,10 @@
         </div>
     </div>
 
-<a class="instruction instruction-ua" href="./instruction.pdf"></a>
+<!-- <a class="instruction instruction-ua" href="./instruction.pdf"></a> -->
+      <a class="instruction" href="./instruction.pdf">
+            <p class="translated-text" key="instruction">111111111</p>
+      </a>
 
 <!--    end navigation-->
 
@@ -561,14 +564,14 @@
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p><b>მწარმოებელი:</b><br>DHU<br>https://www.dhu.de/</p></a>
+                <a class="disclamer-tra__logo" href=""><p><b>მწარმოებელი:</b><br>DHU<br></p></a>
         <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>მომწოდებელი:</b><br> Alpen Pharma<br></p></a>
             </div>
         </div>
     </div>
 
     <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
+        <!-- <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p> -->
     </div>
 </div>
 
