--- a/influcid-Uzbekistan/index-usb.html
+++ b/influcid-Uzbekistan/index-usb.html
@@ -28,25 +28,25 @@
             <div id="menuToggle">
               <input type="checkbox" /> <span></span> <span></span> <span></span>
               <ul id="menu">
-                <li><a class="navmenu" href="#block-1" >Benefits</a></li>
-                <li><a class="navmenu" href="#block-2" >Effect</a></li>
-                <li><a class="navmenu" href="#block-3" >Composition</a></li>
-                <li><a class="navmenu" href="#block-4" >How to use</a></li>
+                <li><a class="navmenu" href="#block-1" >Afzalliklari</a></li>
+                <li><a class="navmenu" href="#block-2" >Effektlar</a></li>
+                <li><a class="navmenu" href="#block-3" >Tarkibi</a></li>
+                <li><a class="navmenu" href="#block-4" >Qollanilishi</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
                 <li><a href="index.html" >узб</a></li>
               </ul>
             </div>
           </div>
           <div class="desctop-navigation">
-            <a class="navmenu" href="#block-1" >Benefits</a>
-              <a class="navmenu" href="#block-2" >Effect</a>
-              <a class="navmenu" href="#block-3" >Composition</a>
-              <a class="navmenu" href="#block-4" >How to use</a>
+            <a class="navmenu" href="#block-1" >Afzalliklari</a>
+              <a class="navmenu" href="#block-2" >Effektlar</a>
+              <a class="navmenu" href="#block-3" >Tarkibi</a>
+              <a class="navmenu" href="#block-4" >Qollanilishi</a>
               <a class="where-to-buy" href="#block-5" >Where to buy</a>
               <a href="index.html" >узб</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
-          ><p class="translated-text" key="instruction">Instruction</p></a
+          ><p class="translated-text" key="instruction">kullash<br> boyicha<br> yuriknoma</p></a
           >
         </div>
 
@@ -280,7 +280,7 @@
                 <p>2019-2020 yilgi yangi mavsumda nimani kutishimiz mumkin?</p>
 
               </div>
-              <button class="accordion">detailed</button>
+              <button class="accordion">batafsil ma'lumot</button>
               <div class="panel">
                 <p>During the new epidemic season, influenza viruses will circulate in the Northern Hemisphere as follows:</p>
                 <ul>
@@ -325,7 +325,7 @@
                 Afsuski, farzandingizni bunday sovuqlardan (kasallik) butun hayotingiz davomida himoya qilishingiz ilojisiz. Ayniqsa ular o`z tengdoshlari orasida bo`lsa.Bolalar bog`chasida yoki maktabda bitta bola kasal  bo`lib qolsa,infektsiya teza tarqaladi.Bolaning kasalligini kopincha onasining kasal bo`lishiga olib keladi.Shu yerda bir savol tug`iladi”Qanday qilib tez istimani tushirish mumkin?Qaysi dori eng zo`r?”
               </p>
               </div>
-              <button class="accordion">detailed</button>
+              <button class="accordion">batafsil ma'lumot</button>
               <div class="panel">
                 <p>The greatest number of a child’s colds occurs between the ages of six months and 12 years, when the immune system is being formed. Effective treatment of children with cold and ARVI requires immediate response to the first signs:</p>
 
@@ -360,7 +360,7 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
               <div id="comp_wgt" data-drug="11722,11721" data-lang="ru" data-url="https://compendium.com.ua/info/11096/infljutsid/" data-proj="инфлюцид" style="border-color: #2894cf; width: 80%"><div class="title" style="background: #2894cf; "><a href="https://compendium.com.ua/info/11096/infljutsid/" title="ИНФЛЮЦИД, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
               <!-- <div class="block-7__img"></div> -->
               <div class="block-7__text">
-                <h3>Evidential base</h3>
+                <h3>dalillar bazasi</h3>
                 <ol>
                   <li>Instruction for the use of medical preparation Influcid</li>
                   <li>Thinesse-Mallwitz, M., Maydannik, V., Keller, T., Klement, P. A Homeopathic Combination Preparation in the Treatment of Feverish Upper Respiratory Tract Infections: An International Randomized Controlled Trial</li>
@@ -386,12 +386,12 @@ The efficacy and safety of Influcid has been studied in many clinical trials, in
               Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул.Лісна, 30а, м.Київ, Пуща-Водиця, 04075; телефон: (044) 401-81-03
             </p> -->
             <div class="logos-container">
-              <a class="disclamer-tra__logo" href=""><p><b>manufacturer:</b><br>DHU (Germany)<br>https://www.dhu.de/</p></a>
+              <a class="disclamer-tra__logo" href=""><p><b>ishlab  chiqaruvchi:</b><br>DHU (Germany)<br>https://www.dhu.de/</p></a>
               <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>importer:</b><br> Alpen Pharm<br>(Switzerland)</p></a>
             </div>
           </div>
           <div class="disclamer-warning">
-            <p>SELF-TREATMENT CAN BE DANGEROUS TO YOUR HEALTH</p>
+            <p>o'z-o'zini davolash  sog'liq uchun xavflidir</p>
           </div>
 
 
