--- a/Tansilotren-Georgia/index.html
+++ b/Tansilotren-Georgia/index.html
@@ -57,7 +57,7 @@
 
 <!-- <a class="instruction instruction-ua" href="./instruction.pdf"></a> -->
       <a class="instruction" href="./instruction.pdf">
-            <p class="translated-text" key="instruction">111111111</p>
+            <p class="translated-text" key="instruction">ანოტაცია</p>
       </a>
 
 <!--    end navigation-->
