--- a/influcid-MN/index.html
+++ b/influcid-MN/index.html
@@ -31,7 +31,8 @@
                 <li><a class="navmenu" href="#block-3" >Найрлага</a></li>
                 <li><a class="navmenu" href="#block-4" >Хэрэглэх арга</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Де купити</a></li>-->
-                <li><a href="index-en.html" >en</a></li>
+                <!-- <li><a href="index-en.html" >en</a></li> -->
+                <li><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -41,7 +42,8 @@
               <a class="navmenu" href="#block-3" >Найрлага</a>
               <a class="navmenu" href="#block-4" >Хэрэглэх арга</a>
               <!-- <a class="where-to-buy" href="#block-5" >Хаанаас худалдаж авах</a> -->
-              <a href="index-en.html" >en</a>
+              <!-- <a href="index-en.html" >en</a> -->
+              <a href="index-ru.html" >ru</a>
           </div>
           <a class="instruction" href="./instruction.pdf">
           	<p class="translated-text" key="instruction">Хэрэглэх заавар</p>
