--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<a href="Tansilotren-Ukraine/index.html">Tansilotren-Ukraine</a>
 			<a href="Tansilotren-Georgia/index.html">Tansilotren-Georgia</a>
 			<a href="Tansilotren-KZ/index.html">Tansilotren-KZ</a>
+			<a href="Tansilotren-AZ/index.html">Tansilotren-AZ</a>
 
 			
 		</section>
@@ -177,6 +178,9 @@
 	}
 	a:nth-child(33)::before {
 		background: url("./Tansilotren-KZ/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(34)::before {
+		background: url("./Tansilotren-AZ/bg.png")no-repeat center / cover;
 	}
 </style>
 
