--- a/Tansilotren-BY/index.html
+++ b/Tansilotren-BY/index.html
@@ -16,13 +16,13 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob" href="#block-4">ГДЕ КУПИТЬ</a>
+            <a class="where-to-buy-mob" href="https://tabletka.by/search?request=%D1%82%D0%BE%D0%BD%D0%B7%D0%B8%D0%BB%D0%BE%D1%82%D1%80%D0%B5%D0%BD">ГДЕ КУПИТЬ</a>
             <div class="navigation-menu">
                 <a class="navmenu" href="#block-1" >Состав и действие</a>
                 <a class="navmenu" href="#block-2">Способ приемА</a>
                 <a class="navmenu" href="#block-3">Полезная информация</a>
-                <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
-                <a class="lang" href="index-en.html">en</a>
+                <a class=" where-to-buy" href="https://tabletka.by/search?request=%D1%82%D0%BE%D0%BD%D0%B7%D0%B8%D0%BB%D0%BE%D1%82%D1%80%D0%B5%D0%BD">ГДЕ КУПИТЬ</a>
+<!--                <a class="lang" href="index-en.html">en</a>-->
             </div>
 
             <!--        mobile menu-->
@@ -44,7 +44,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang" href="index-en.html">en</a>
+<!--                            <a class="lang" href="index-en.html">en</a>-->
                         </li>
                     </ul>
                 </div>
@@ -62,8 +62,8 @@
     <div class="header-custom">
         <div class="header-container">
             <div class="header-title">
-                <b>Ангина?</b><br>
-                <p>Лечим правильно  –  <strong>ТОНЗИЛОТРЕН</strong></p>
+                <b>АНГИНА? Хронический тонзиллит?</b><br>
+                <p><strong>ТОНЗИЛОТРЕН</strong> - комплексное лечение</p>
             </div>
             <div class="header-main">
                 <div class="header-main-product-img"></div>
@@ -89,7 +89,7 @@
             <br>тонзиллите <sup>4</sup></p>
     </div>
     <div class="block-2__plate">
-        <p>Натуральный
+        <p>Комплексный
             <br>состав</p>
     </div>
     <a href="https://www.clinicaltrialsregister.eu/ctr-search/search?query=tonsilotren" class="block-2__plate block-2__plate-a">
@@ -99,7 +99,8 @@
     </a>
     <a name="block-1"></a>
 </div>
-<h2 class='block-4-h2'> 5 натуральных компонентов<br><b>для профилактики и лечения ангины</b></h2>
+<h2 class='block-4-h2'> 5 растительных и минеральных компонентов<br><b>для
+    лечения ангины и хронического тонзиллита</b></h2>
 <div class="block-4__container">
     <div class="block-interactive-inner">
         <div class="block-interactive-inner__img"></div>
@@ -155,33 +156,33 @@
 
 
 
-        <div class="popup popup1" role="dialog">
-            <div class="popup__overlay" data-action="close1"></div>
-            <div class="popup__content">
-                <button class="popup__close-btn" data-action="close1">
-                    <span class="icon icon_close" rel="img"></span>
-                </button>
-                <div class="popup__body">
-                    <div class="popup__message">
-                        <p><b>Дети от 2 до 6 лет </b></p>
+<!--        <div class="popup popup1" role="dialog">-->
+<!--            <div class="popup__overlay" data-action="close1"></div>-->
+<!--            <div class="popup__content">-->
+<!--                <button class="popup__close-btn" data-action="close1">-->
+<!--                    <span class="icon icon_close" rel="img"></span>-->
+<!--                </button>-->
+<!--                <div class="popup__body">-->
+<!--                    <div class="popup__message">-->
+<!--                        <p><b>Дети от 2 до 6 лет </b></p>-->
 
-                        <p><b>При острых состояниях или для поддерживающей терапии:</b> по 1 табл. 3 раза в сутки.</p>
+<!--                        <p><b>При острых состояниях или для поддерживающей терапии:</b> по 1 табл. 3 раза в сутки.</p>-->
 
-                        <p><b>При увеличении небных миндалин:</b> 
-                            по 1 табл. 3 раза в сутки, 
-                            6-8 недель.</p>
+<!--                        <p><b>При увеличении небных миндалин:</b> -->
+<!--                            по 1 табл. 3 раза в сутки, -->
+<!--                            6-8 недель.</p>-->
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b>
-                            по 1 табл. 3 раза в сутки,
-                            6-8 недель
-                            несколько курсов в год.</p>
+<!--                        <p><b>При склонности к ангинам для профилактики повторных эпизодов: </b>-->
+<!--                            по 1 табл. 3 раза в сутки,-->
+<!--                            6-8 недель-->
+<!--                            несколько курсов в год.</p>-->
 
-                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
+<!--                        <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>-->
 
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="popup popup2" role="dialog">
             <div class="popup__overlay" data-action="close2"></div>
@@ -193,15 +194,17 @@
                     <div class="popup__message">
                         <p><b>Дети от 6 до 12 лет</b></p>
 
-                        <p><b>Острый период:</b> по 1 табл. каждые 2 часа (до 6 раз в день)
+                        <p><b>Острый период:</b></p>
+                        <p>по 1 табл. каждые 2 часа (до 6 раз в день)
                             первые 1-2 дня до улучшения.</p>
 
-                        <p><b>Поддерживающая терапия:</b> по 1 табл. 3 раза в день до полного выздоровления.
+                        <p><b>Поддерживающая терапия:</b></p> 
+                        <p> по 1 табл. 3 раза в день до полного выздоровления.
                             *Если после 8 дней лечения не наблюдается полного выздоровления или появились новые симптомы заболевания, следует обязательно обратиться к врачу.</p>
 
-                        <p><b>При увеличении небных миндалин:</b> по 1 табл. 3 раза в день, 6-8 недель.</p>
+                        <p><b>При увеличении небных миндалин:</b> </p> <p>по 1 табл. 3 раза в день, 6-8 недель.</p>
 
-                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b> по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
+                        <p><b>При склонности к ангинам для профилактики повторных эпизодов:</b> </p> <p>по 1 табл. 3 раза в день, 6-8 недель несколько курсов в год.</p>
 
                         <p>Таблетки принимать за 30 минут до или через 30 минут после еды, медленно рассасывая в полости рта.</p>
 
@@ -218,6 +221,8 @@
                 </button>
                 <div class="popup__body">
                     <div class="popup__message">
+
+                        <p><b>Дети старше 12 лет и взрослые</b></p>
 
                         <p><b>Острый период:</b></p>
 
@@ -255,13 +260,13 @@
 <!--        popup///////////-->
 
 
-        <div class="plate">
-            <div class="plate-img"></div>
-            <h3>Дети от 2 до 6 лет</h3>
-            <p><b>При острых состояниях или для поддерживающей терапии:</b><br>по 1 табл. 3 раза в день.</p>
-            <!--            <div class="popup popup1">Детальнее</div>-->
-            <button class="popup-btn popup1" data-action="open1">Детальнее</button>
-        </div>
+<!--        <div class="plate">-->
+<!--            <div class="plate-img"></div>-->
+<!--            <h3>Дети от 2 до 6 лет</h3>-->
+<!--            <p><b>При острых состояниях или для поддерживающей терапии:</b><br>по 1 табл. 3 раза в день.</p>-->
+<!--            &lt;!&ndash;            <div class="popup popup1">Детальнее</div>&ndash;&gt;-->
+<!--            <button class="popup-btn popup1" data-action="open1">Детальнее</button>-->
+<!--        </div>-->
 
 
 
@@ -331,9 +336,9 @@
 
                 <p>Важно, что Тонзилотрен, действуя на миндалины, снимает воспаление и восстанавливает их защитную функцию, что способствует уменьшению количества и риска возникновения повторных ангин и потребности в применении антибиотиков<sup>1</sup>.</p>
 
-                <p>Препарат можно применять как для лечения, так и для профилактики ангин. Применяется у детей старше 2 лет и взрослых. При склонности к частым ангинам несколько курсов в год с применением препарата Тонзилотрен могут позволить сохранить миндалины — важный иммунный орган человека. Курс: по 1 табл. 3 раза в день в течение 6-8 недель.</p>
+                <p>Препарат можно применять как в острый период заболевания, так и для лечения хронических тонзиллитов. Применяется у детей старше 6 лет и взрослых. При склонности к частым ангинам несколько курсов в год с применением препарата Тонзилотрен могут позволить сохранить миндалины — важный иммунный орган человека. Курс: по 1 табл. 3 раза в день в течение 6-8 недель.</p>
 
-                <p><b>Тонзилотрен – безопасное лечение и профилактика ангины. И пусть ваши миндалины никогда не узнают, что такое хронический тонзиллит.</b></p>
+                <p><b>Тонзилотрен – безопасное лечение ангин и хронических тонзиллитов. И пусть ваши миндалины никогда не узнают, что такое хронический тонзиллит.</b></p>
                 <p>1. Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</p>
             </div>
         </div>
@@ -348,12 +353,8 @@
 
                     Нет необходимости глотать таблетку, она приятная на вкус и легко растворяется, тает в полости рта.
 
-                    При лечении детей в возрасте до 3 лет таблетку рекомендуется растворять в небольшом количестве воды (например, в чайной ложке).
-
                     Можно принимать в любом месте и в любое время. Но помните, что интервал между приёмом препарата Тонзилотрен и едой или питьём должен быть не менее 30 минут.
-
                     Тонзилотрен при ангине следует принимать сразу после того, как Вы заметили первые симптомы.
-
                     Тонзилотрен помогает восстановить структуру и защитную функцию миндалин.</p>
             </div>
         </div>
@@ -441,7 +442,7 @@
                     Более 80 лет для базисной терапии тонзиллита применяется натуральный препарат Тонзилотрен.<br>
                     Тонзилотрен имеет системное противовоспалительное действие, а также восстанавливает защитную функцию
                         миндалин и показатели общего иммунитета.</p>
-                <p><b>Ангина? Лечим правильно – ТОНЗИЛОТРЕН</b></p>
+                <p><b>Ангина? ТОНЗИЛОТРЕН –комплексное лечение!</b></p>
                 <p>1 Дитячий лікар 6 (13) 2011, Хронічний тонзиліт у дітей: актуальні питання лікування та профілактики.</p>
                 </p>
             </div>
@@ -558,8 +559,10 @@
         </div>
 
         <h1>Где купить</h1>
+        <div class="block-7__img">
+            <a class="where-to-buy where-to-buy__bottom" href="https://tabletka.by/search?request=%D1%82%D0%BE%D0%BD%D0%B7%D0%B8%D0%BB%D0%BE%D1%82%D1%80%D0%B5%D0%BD">Где купить</a>
+        </div>
 
-        <div id="comp_wgt" class="map2" data-drug="5835" data-lang="ru" data-url="https://compendium.com.ua/info/3025/tonzilotren/" data-proj="tonsilotren" style="z-index: 5; border-color: #A00067; width: 100%;"><div class="title" style="background: #A00067;"><a href="https://compendium.com.ua/info/3025/tonzilotren/" title="ТОНЗИЛОТРЕН, Alpen Pharma AG" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg" data-pagespeed-url-hash="161338521" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
         <div class="map-text">
             <h3>Доказательная база</h3>
             <ol>
@@ -575,8 +578,8 @@
     <div class="disclamer-tra__inner">
         <div class="disclamer-tra">
             <p class="dt1">
-                Реклама лікарського засобу. Перед застосуванням уважно ознайомтесь з інструкцією та проконсультуйтеся з лікарем. РП Тонзилотрен № UA/3781/01/01 від 20.08.2015. Ексклюзивний дистриб'ютор: ПрАТ «Натурфарм», вул. Лісна, 30а, м. Київ,
-                Пуща-Водиця, 04075; телефон: (044) 401-81-03.
+                Предприятие-производитель: Немецкий Гомеопатический Союз (Deutsche Homoopathie-Union-DHU) Германия, Ottostrasse 24, 76227 Karlsruhe, Germany  Официальный представитель в РБ: АО «Alpen Pharma AG» (Швейцарская Конфедерация).
+                Представительство в РБ: 220053, г.Минск, ул. Пархоменко,3, офис 1Б. www.alpenpharma.com info.belarus@alpenpharma.com Номер регистрационного свидетельства МЗ РБ Таблетки №2882/97/02/07/13/18 от 11.04.2018 бессрочно
             </p>
 
 
@@ -588,7 +591,7 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
+        <p>НА ПРАВАХ РЕКЛАМЫ. ГОМЕОПАТИЧЕСКОЕ ЛЕКАРСТВЕННОЕ СРЕДСТВО БЕЗ УТВЕРЖДЕННЫХ  ТЕРАПЕВТИЧЕСКИХ (МЕДИЦИНСКИХ) ПОКАЗАНИЙ. ТРАДИЦИОННО ПРИМЕНЯЕТСЯ В КОМПЛЕКСНОЙ ТЕРАПИИ ОСТРОГО И ХРОНИЧЕСКОГО ТОНЗИЛЛИТА. ПЕРЕД ПРИМЕНЕНИЕМ ОЗНАКОМЬТЕСЬ С  ИНСТРУКЦИЕЙ И ПРОКОНСУЛЬТИРУЙТЕСЬ С ВРАЧОМ.</p>
     </div>
 </div>
 
