--- a/Tansilotren/index-en.html
+++ b/Tansilotren/index-en.html
@@ -98,6 +98,7 @@
             effectiveness<sup>5</sup>
         </p>
     </a>
+    <a name="block-1"></a>
 </div>
 <h2 class='block-4-h2' >5 natural ingredients<br><b>for the prevention and treatment of tonsillitis</b></h2>
 <div class="block-4__container">
