--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 			<a href="Tansilotren-Georgia/index.html">Tansilotren-Georgia</a>
 			<a href="Tansilotren-KZ/index.html">Tansilotren-KZ</a>
 			<a href="Tansilotren-AZ/index.html">Tansilotren-AZ</a>
+			<a href="Tansilotren-AZ/index.html">Tansilotren-BY</a>
 
 			
 		</section>
@@ -181,6 +182,9 @@
 	}
 	a:nth-child(34)::before {
 		background: url("./Tansilotren-AZ/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(35)::before {
+		background: url("./Tansilotren-BY/bg.png")no-repeat center / cover;
 	}
 </style>
 
