--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<a href="Tansilotren-Georgia/index.html">Tansilotren-Georgia</a>
 			<a href="Tansilotren-KZ/index.html">Tansilotren-KZ</a>
 			<a href="Tansilotren-AZ/index.html">Tansilotren-AZ</a>
-			<a href="Tansilotren-AZ/index.html">Tansilotren-BY</a>
+			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
 
 			
 		</section>
