--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<a href="Tansilotren-KZ/index.html">Tansilotren-KZ</a>
 			<a href="Tansilotren-AZ/index.html">Tansilotren-AZ</a>
 			<a href="Tansilotren-BY/index.html">Tansilotren-BY</a>
+			<a href="Vaksol/index.html">Vaksol</a>
 
 			
 		</section>
@@ -185,6 +186,9 @@
 	}
 	a:nth-child(35)::before {
 		background: url("./Tansilotren-BY/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(36)::before {
+		background: url("./Vaksol/bg.png")no-repeat center / cover;
 	}
 </style>
 
