--- a/Vaksol/index.html
+++ b/Vaksol/index.html
@@ -25,7 +25,7 @@
                 <a class="navmenu" href="#block-5">Поради</a>
 
                 <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ</a>
-                <a class="lang" href=""><p><b>UA</b>  RU</p></a>
+                <a class="lang" href="index-ru.html"><p><b>UA</b>  RU</p></a>
             </div>
 
             <!--        mobile menu-->
@@ -53,7 +53,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang" href=""><p><b>UA</b>  RU</p></a>
+                            <a class="lang" href="index-ru.html"><p><b>UA</b>  RU</p></a>
                         </li>
                     </ul>
                 </div>
@@ -101,7 +101,7 @@
         <div class="factors-plate factors-plate-2">
             <div class="factors-hide">
                 <p>Навушники- вкладиші та вакуумні гарнітури належать до факторів ризику надмірного виділення вушної сірки та утворенню сірчаних пробок. Такий вид навушників сприяє посиленню секреції сірчаних залоз.
-                    ВАКСОЛ та слухові апарати. Для людей з вадами слуху</p>
+                    </p>
             </div>
             <div class="factors-img"></div>
             <div class="factors-img_text">
