--- a/Vaksol/index-ru.html
+++ b/Vaksol/index-ru.html
@@ -53,7 +53,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang" href="index.html"><p><b>UA</b>  RU</p></a>
+                            <a class="lang" href="index.html"><p>UA  <b>RU</b></p></a>
                         </li>
                     </ul>
                 </div>
