--- a/Vaksol/index-ru.html
+++ b/Vaksol/index-ru.html
@@ -25,7 +25,7 @@
                 <a class="navmenu" href="#block-5">Советы</a>
 
                 <a class=" where-to-buy" href="#block-6">Где купить</a>
-                <a class="lang" href="index.html"><p>UA </p></a><a class="lang"><b>RU</b></a>
+                <a class="lang lang-dop" href="index.html"><p>UA </p></a><a class="lang"><b>RU</b></a>
             </div>
 
             <!--        mobile menu-->
