--- a/Vaksol/index.html
+++ b/Vaksol/index.html
@@ -25,7 +25,7 @@
                 <a class="navmenu" href="#block-5">Поради</a>
 
                 <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ</a>
-                <a class="lang"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
+                <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
             </div>
 
             <!--        mobile menu-->
